--- a/spring-boot-crud-example-master/src/main/resources/application.yml
+++ b/spring-boot-crud-example-master/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password: Welcome@#$99
-    url: jdbc:mysql://localhost:3306/testmicroservice
+    url: jdbc:mysql://mysqldb/dockertestdb
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
