--- a/spring-boot-crud-example-master/src/main/resources/application.properties
+++ b/spring-boot-crud-example-master/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://mysqldb:3306/testdockerdb
+spring.datasource.url = jdbc:mysql://localhost:3306/testmicroservice
 spring.datasource.username = root
 spring.datasource.password = Welcome@$99
 spring.jpa.show-sql = true
