--- a/spring-boot-crud-example-master/pom.xml
+++ b/spring-boot-crud-example-master/pom.xml
@@ -33,6 +33,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+						<version>8.0.19</version>
+
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
