--- a/spring-boot-crud-example-master/src/main/resources/application.properties
+++ b/spring-boot-crud-example-master/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://1ee7d378ba53:3306/employeedb
+spring.datasource.url = jdbc:mysql://mysqldb:3306/employeedb
 spring.datasource.username = root
 spring.datasource.password = Welcome@$99
 spring.datasource.platform=mysql
 spring.datasource.initilization-mode=always
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
