--- a/spring-boot-crud-example-master/src/main/resources/application.yaml
+++ b/spring-boot-crud-example-master/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:Welcome@#$99}
+    password: ${MYSQL_PASSWORD:Welcome}
     url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/testdb
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
