--- a/spring-boot-crud-example-master/src/main/resources/application.yaml
+++ b/spring-boot-crud-example-master/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:Welcome}
-    url: jdbc:mysql://${MYSQL_HOST:mysqldb}:${MYSQL_PORT:3306}/testdb
+    username: root
+    password: root
+    url: jdbc:mysql://mysqldb/bootdb
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
