--- a/spring-boot-crud-example-master/src/main/resources/application.yaml
+++ b/spring-boot-crud-example-master/src/main/resources/application.yaml
@@ -9,3 +9,6 @@ spring:
     hibernate:
       ddl-auto: update
     properties.hibernate.dialect: org.hibernate.dialect.MySQLDialect
+   sql:
+    init:
+      mode: always
