--- a/spring-boot-crud-example-master/src/main/resources/application.yaml
+++ b/spring-boot-crud-example-master/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://mysqldb/bootdb
+    url: jdbc:mysql://mysqldb:3306/bootdb
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
