--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 services:
   organization:
 #    image: organization-service
-    build: ./organization-service
+    build: ./spring-boot-crud-example-master
     ports:
       - "8083:8083"
     networks:
