--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - mysqldb
 
   mysqldb:
-    image: mysql:8
+    image: mysql:latest
     networks:
       - organization-mysql
     environment:
