--- a/spring-boot-crud-example-master/src/main/resources/application.yaml
+++ b/spring-boot-crud-example-master/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: root
-    password: root
+    password: Welcome@#$99
     url: jdbc:mysql://localhost:3306/organizationdb?useSSL=false&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
