--- a/spring-boot-crud-example-master/src/main/resources/application.yaml
+++ b/spring-boot-crud-example-master/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password: Welcome@#$99
-    url: jdbc:mysql://172.26.0.1:3306/organizationdb?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/organizationdb?useSSL=false&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
