--- a/spring-boot-crud-example-master/pom.xml
+++ b/spring-boot-crud-example-master/pom.xml
@@ -31,9 +31,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-						<version>8.0.19</version>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+	                <scope>runtime</scope>
 
 		
 		</dependency>
