--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: "3"
 services:
   dockerintegraation:
 #    image: organization-service
-    build: ./spring-boot-crud-example-master
+    build: ./spring-boot-crud-example-master    
+    container_name: "dockermysqlintegration"    
     ports:
       - "8083:8083"
     networks:
@@ -11,7 +12,8 @@ services:
       - mysqldb
 
   mysqldb:
-    image: mysql:latest
+    image: mysql:latest    
+    container_name: "mysql"  
     ports :
       - "3306:3306"
     networks:
