--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,12 @@ services:
     container_name: "dockermysqlintegration"    
     ports:
       - "8083:8083"
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=dockerdb
+      - MYSQL_PORT=3036
+      - MYSQL_HOST=mysqldb
+      - MYSQL_USER=root
     networks:
       - organization-mysql
     depends_on:
