--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
 
   mysqldb:
     image: mysql:latest    
-    container_name: "mysql"  
+    container_name: mysqldb
     ports :
       - "3306:3306"
     networks:
