--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
   mysqldb:
     image: mysql:latest    
     container_name: mysqldb
-    voulme : /var/mysql/backupdata
+    # voulme : /var/mysql/backupdata
     ports :
       - 3307:3306
     networks:
