--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,9 +17,8 @@ services:
     networks:
       - organization-mysql
     links:
-      - mysqldb
-
-  mysqldb:
+      - mysqld
+mysqldb:
     image: mysql:latest    
     container_name: mysqldb
     # voulme : /var/mysql/backupdata
