--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     networks:
       - organization-mysql
     links:
-      - mysqld
+      - mysldb
 mysqldb:
     image: mysql:latest    
     container_name: mysqldb
