--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,14 @@ services:
       - organization-mysql
     depends_on:
       mysqldb:
+    entrypoint:
+      [
+        "/app/wait-for.sh",
+        "postgres:5432",
+        "--",
+        "/app/start.sh"
+      ]
+    command: [ "/app/main" ]
               condition: service_healthy
 
 
