--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,8 +33,10 @@ services:
       - MYSQL_USER=root
     networks:
       - organization-mysql
-    depends_on:
-      mysqldb:
+    links:
+      - mysqldb
+    # depends_on:
+    # mysqldb:
     
 
 
